# ChewyQoderProject

./: .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_OVERVIEW.md  README.md  dev-setup.sh  docker-compose.dev.yml  docker-compose.yml
.qoder/: test-checklist.md
.qoder/quests/: feature-adaptation.md  todo-system-development.md  ui-adjustment.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/apps/projects/: admin.py  models.py  serializers.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  0002_initial.py  0003_project_is_pinned.py
backend/apps/tags/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/tags/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tag_options_tag_order.py
backend/apps/tasks/: admin.py  models.py  serializers.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_task_start_date.py  0004_task_is_deleted.py
backend/apps/users/: admin.py  models.py  serializers.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/todo_project/: settings.py  urls.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  Loading.tsx  ProtectedRoute.tsx
frontend/src/pages/: CalendarPage.tsx  DashboardPage.tsx  LoginPage.tsx  NotesPage.tsx  ProjectsPage.tsx  RegisterPage.tsx  ReportsPage.tsx  SettingsPage.tsx  TagsPage.tsx  TasksPage.tsx
frontend/src/services/: api.ts  auth.ts  project.ts  tag.ts  task.ts
(+70 files in other folders)
